# -Todo-In-Memory-Python-Console-App

./: README.md  pyproject.toml  test_functionality.py
specs/history/: implementation_notes.md  spec_v1.md
src/todo/: __init__.py  __main__.py  cli.py  models.py  storage.py  task_manager.py
